--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/ob_hibernate
+spring.datasource.url=jdbc:postgresql://ec2-3-224-8-189.compute-1.amazonaws.com:5432/d4ejgq74ur5te2
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
